--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook": "^7.5.1",
     "styled-components": "^6.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
