--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint src/**/*",
     "lint:precommit": "eslint src/**/* --fix",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -70,6 +71,7 @@
     "storybook": "^7.5.1",
     "styled-components": "^6.1.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "husky": "^8.0.0"
   }
 }
