--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:ci": "jest",
     "check-types": "tsc",
     "format": "prettier '**/*.{j,t}{s,sx}' --write",
-    "format:precommit": "prettier --write",
+    "format:precommit": "prettier '**/*.{j,t}{s,sx}' --write",
     "format:check": "prettier '**/*.{j,t}{s,sx}' --check",
     "lint": "eslint src/**/*",
     "lint:precommit": "eslint src/**/* --fix",
