--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,38 @@
 {
     "compilerOptions": {
-      "esModuleInterop": true,
-      "strict": true,
+      "target": "es5",
+      "lib": [
+        "dom", 
+        "dom.iterable", 
+        "esnext"
+      ],
+      "allowJs": false,
       "skipLibCheck": true,
-      "jsx": "react",
-      "module": "ESNext",
-      "declaration": true,
-      "declarationDir": "types",
-      "sourceMap": true,
-      "outDir": "dist",
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "noEmit": true,
+      "esModuleInterop": true,
+      "module": "esnext",
       "moduleResolution": "node",
-      "emitDeclarationOnly": true,
-      "allowSyntheticDefaultImports": true,
-      "forceConsistentCasingInFileNames": true
+      "plugins": [
+        { "name": "typescript-plugin-css-modules" }
+      ],
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "jsx": "preserve",
+      "incremental": true,
+      "noUncheckedIndexedAccess": true,
+      "noImplicitAny": true,
+      "downlevelIteration": true,
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["src/*"]
+      },
     },
     "exclude": [
       "dist",
       "types",
-      "node_modules",
-      "src/**/*.test.tsx",
-      "src/**/*.stories.tsx"
-    ]
+      "node_modules"
+    ],
+    "include": ["**/*.ts", "**/*.tsx"]
   }
