--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       ],
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "jsx": "preserve",
+      "jsx": "react",
       "incremental": true,
       "noUncheckedIndexedAccess": true,
       "noImplicitAny": true,
