--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.12.0",
     "zod": "^3.22.4"
   },
   "peerDependencies": {
