--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "storybook": "^7.5.1",
     "styled-components": "^5.3.11",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
