--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rollup": "^4.1.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "storybook": "^7.5.1",
     "styled-components": "^5.3.11",
     "ts-jest": "^29.1.1",
