--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.6",
     "@types/react": "^18.2.31",
+    "@types/react-test-renderer": "^18.0.5",
     "@types/styled-components": "^5.1.29",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -68,6 +69,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^4.1.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
