--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.12.0",
-    "zod": "^3.22.4"
+    "@cloudinary/url-gen": "^1.12.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -46,7 +45,6 @@
     "@storybook/blocks": "^7.5.1",
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.1",
-    "@storybook/react-vite": "^7.5.1",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
@@ -78,7 +76,6 @@
     "storybook": "^7.5.1",
     "styled-components": "^5.3.11",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
-    "vite-tsconfig-paths": "^4.2.1"
+    "typescript": "^5.2.2"
   }
 }
