feat: adding storybook docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
       "types",
       "node_modules"
     ],
-    "include": ["**/*.ts", "**/*.tsx"]
+    "include": ["**/*.ts", "**/*.tsx"],
   }
