--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "test": "jest --watch --collectCoverage=false",
@@ -26,6 +29,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.12.0",
+    "@rollup/plugin-json": "^6.0.1",
     "storybook-react-context": "^0.6.0"
   },
   "peerDependencies": {
