feat: remove cjs version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@oak-academy/oak-components",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "licence": "MIT",
   "description": "Shared components for oak applications",
-  "main": "dist/cjs/index.js",
+  "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types.d.ts",
   "files": [
