--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@oak-academy/oak-components",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "licence": "MIT",
   "description": "Shared components for oak applications",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types.d.ts",
   "files": [
@@ -25,20 +26,16 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.12.0",
-    "@rollup/plugin-json": "^6.0.1",
-    "storybook-react-context": "^0.6.0"
-  },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
@@ -80,7 +77,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript-paths": "^1.4.0",
     "storybook": "^7.5.1",
-    "styled-components": "^5.3.11",
+    "storybook-react-context": "^0.6.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
