--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oak-academy/oak-components",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "licence": "MIT",
   "description": "Shared components for oak applications",
   "main": "dist/cjs/index.js",
@@ -30,6 +30,7 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.11"
