--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "next": "13.4.4 - 14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "next-cloudinary": "^5.20.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
@@ -73,6 +74,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-styled-components": "^7.2.0",
+    "next-cloudinary": "^5.20.0",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
