feat: add `$aspectRatio` and `$boxSizing` to size props
they're very useful

--- a/package.json
+++ b/package.json
@@ -98,5 +98,8 @@
   "bugs": {
     "url": "https://github.com/oaknational/oak-components/issues"
   },
-  "homepage": "https://github.com/oaknational/oak-components#readme"
+  "homepage": "https://github.com/oaknational/oak-components#readme",
+  "overrides": {
+    "jsdom": "24.0.0"
+  }
 }
