--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
           "assets": [
             "package.json"
           ],
-          "message": "build(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+          "message": "build(release): ${nextRelease.version} [skip ci]"
         }
       ]
     ]
