--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,13 @@
 name: Release
 on:
-  workflow_run:
-    workflows: Verify
-    branches: main
-    types: completed
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 permissions:
   contents: read # for checkout
 
 jobs:
   release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Release
     runs-on: ubuntu-latest
     permissions:
@@ -35,4 +32,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          CI: true
         run: npx semantic-release
