--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
   "homepage": "https://github.com/oaknational/oak-components#readme",
   "release": {
     "branches": [
-      "main"
+      "main",
+      "next"
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
