chore: add package-lock to build commit

--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
         "@semantic-release/git",
         {
           "assets": [
-            "package.json"
+            "package.json",
+            "package-lock.json"
           ],
           "message": "build(release): ${nextRelease.version} [skip ci]"
         }
