feat(ENG-692): add `OakModal`

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/addon-onboarding": "^1.0.10",
     "@storybook/blocks": "^7.6.7",
     "@storybook/nextjs": "^7.6.7",
+    "@storybook/preview-api": "^8.0.4",
     "@storybook/react": "^7.6.7",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.2.0",
@@ -61,6 +62,7 @@
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.47",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/react-transition-group": "^4.4.10",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
@@ -80,7 +82,9 @@
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-on": "^3.9.2",
     "react-test-renderer": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "rollup": "^4.9.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
