--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/nextjs": "^8.0.10",
     "@storybook/preview-api": "^8.0.10",
     "@storybook/react": "^8.0.10",
+    "@storybook/test": "^8.2.7",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -126,8 +127,5 @@
   },
   "overrides": {
     "jsdom": "24.0.0"
-  },
-  "dependencies": {
-    "@storybook/test": "^8.1.0"
   }
 }
