fix: missing files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,7 +24,8 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 
 sonar.coverage.exclusions=\
-  src/**/*.stories.tsx
+  src/**/*.stories.tsx,\
+  src/svgs/**/*
 
 # code duplication exclusions
 sonar.cpd.exclusions=\
