--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "1.52.0",
   "licence": "MIT",
   "description": "Shared components for Oak applications",
-  "main": "dist/cjs/index.js",
+  "main": "./dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types.d.ts",
   "files": [
     "dist"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types.d.ts",
+      "default": "./dist/esm/index.js"
+    }
+  },
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "rollup -c",
     "test": "jest --watch --collectCoverage=false",
     "test:snapshot": "jest --collectCoverage=false --updateSnapshot",
     "test:ci": "jest",
@@ -34,11 +43,16 @@
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.11"
   },
+  "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "react-focus-on": "^3.9.4",
+    "react-transition-group": "^4.4.5"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -87,6 +101,7 @@
     "react-transition-group": "^4.4.5",
     "rollup": "^4.9.4",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-node-externals": "^7.1.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript-paths": "^1.5.0",
     "storybook": "^8.0.10",
