--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "next-cloudinary": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": ">=5.3.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
