--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "author": "",
   "peerDependencies": {
-    "next": "^15",
+    "next": ">=14.2.12",
     "next-cloudinary": ">=6.16.0",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0",
