--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -25,7 +25,8 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 sonar.coverage.exclusions=\
   src/**/*.stories.tsx,\
-  src/svgs/**/*
+  src/svgs/**/*,\
+  src/test-helpers/**/*
 
 # code duplication exclusions
 sonar.cpd.exclusions=\
