--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^11.0.2",
-    "@storybook/addon-a11y": "^8.0.10",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/addon-onboarding": "^8.0.10",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/nextjs": "^8.6.12",
-    "@storybook/preview-api": "^8.0.10",
-    "@storybook/react": "^8.0.10",
-    "@storybook/test": "^8.2.7",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-onboarding": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/nextjs": "8.6.14",
+    "@storybook/preview-api": "^8.6.14",
+    "@storybook/react": "8.6.14",
+    "@storybook/test": "^8.6.14",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
