--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "storybook": "^8.0.10",
     "storybook-react-context": "^0.6.0",
     "ts-jest": "^29.1.1",
+    "tsx": "^4.20.5",
     "typescript": "^5.3.3"
   },
   "directories": {
