--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
     "@storybook/addon-onboarding": "^8.6.14",
+    "@storybook/addon-themes": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/nextjs": "8.6.14",
     "@storybook/preview-api": "^8.6.14",
