chore: update storybook related deps

--- a/package.json
+++ b/package.json
@@ -46,17 +46,13 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^13.1.1",
-    "@storybook/addon-a11y": "^8.6.14",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/addon-onboarding": "^8.6.14",
-    "@storybook/addon-themes": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/nextjs": "8.6.14",
-    "@storybook/preview-api": "^8.6.14",
-    "@storybook/react": "8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-a11y": "^10.0.8",
+    "@storybook/addon-docs": "^10.0.8",
+    "@storybook/addon-links": "^10.0.8",
+    "@storybook/addon-onboarding": "^10.0.8",
+    "@storybook/addon-themes": "^10.0.8",
+    "@storybook/nextjs": "^10.0.8",
+    "@storybook/react": "^10.0.8",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
@@ -95,8 +91,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript-paths": "^1.5.0",
     "semantic-release": "^25.0.1",
-    "storybook": "^8.0.10",
-    "storybook-react-context": "^0.6.0",
+    "storybook": "^10.0.8",
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.5",
     "typescript": "^5.3.3"
