--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "test:snapshot": "jest --collectCoverage=false --updateSnapshot",
     "test:ci": "jest",
     "check-types": "tsc",
+    "type-check": "tsc --noEmit",
     "format": "prettier '**/*.{j,t}{s,sx}' --write",
     "format:precommit": "prettier '**/*.{j,t}{s,sx}' --write",
     "format:check": "prettier '**/*.{j,t}{s,sx}' --check",
     "lint": "eslint src/**/*",
     "lint:precommit": "eslint src/**/* --fix",
+    "fix": "npm run lint:precommit && npm run format:precommit",
+    "check": "npm run type-check && npm run lint && npm run format:check && npm run test:ci && npm run test:snapshot",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky install",
