--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "cSpell.words": ["Flexbox", "oaknational", "WCAG", "yalc"]
+  "cSpell.words": ["autodocs", "Flexbox", "oaknational", "WCAG", "yalc"]
 }
