refactor(stories): extract BaseButton to fix DRY violation
- Created BaseButton with shared styles (padding, border, font, etc.)
- NormalHoverButton, NormalActiveButton, HighContrastHoverButton,
  HighContrastActiveButton now extend BaseButton
- Eliminates ~90% code duplication across 4 button variants

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "cSpell.words": ["autodocs", "Flexbox", "oaknational", "WCAG", "yalc"]
+  "cSpell.words": ["autodocs", "Flexbox", "oaknational", "vars", "WCAG", "yalc"]
 }
