--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "editor.formatOnSave": true,
-  "cSpell.words": ["autodocs", "Flexbox", "oaknational", "vars", "WCAG", "yalc"]
+    "editor.formatOnSave": true
 }
