build: add prepare script for GitHub dependency installs
When installed from GitHub tarball (no .git dir), runs 'npm run build'
to generate dist/ folder. In dev (with .git), runs husky install.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:precommit": "eslint src/**/* --fix",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prepare": "husky install",
+    "prepare": "if [ -d .git ]; then husky install; else npm run build; fi",
     "prepublishOnly": "./scripts/prepublish.sh",
     "publish:local": "npm run build && yalc publish --no-scripts"
   },
